[package]
name = "p2where"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tun = "0.4.0"
futures-util = "0.3"                             # For futures_util::{SinkExt, StreamExt}
